Definitively fixes weird circular issues with radio checkboxes, fixes label alignment

--- a/src/definitions/modules/checkbox.less
+++ b/src/definitions/modules/checkbox.less
@@ -32,8 +32,9 @@
   position: relative;
   display: inline-block;
 
-  height: @checkboxHeight;
+  height: @checkboxSize;
 
+  font-size: 1rem;
   min-width: @checkboxSize;
   line-height: @checkboxHeight;
   backface-visibility: hidden;
@@ -60,7 +61,11 @@
 .ui.checkbox label {
   cursor: pointer;
   padding-left: @labelPadding;
+  line-height: @checkboxHeight;
   outline: none;
+}
+.ui.checkbox label {
+  font-size: @fontSize;
 }
 
 .ui.checkbox .box:before,
@@ -90,6 +95,7 @@
   position: absolute;
   top: @checkboxCheckOffset;
   left: 0px;
+  line-height: 1;
   width: @checkboxSize;
   text-align: center;
 
